Fix Bugs with Displaying Errors and Rounding Numbers
*Add error handling in Javascript for numbers too large to display
*Add rounding capability in Javascript for large decimal numbers
*Add black-text class in CSS

--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,9 @@ button {
 .black {
     background-color: $black;
 }
+.black-text {
+    color: $black;
+}
 .span-two {
     grid-row-end: span 2;
 }
